attachment dto and formal image and thumbnail url